# android-manifest-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
apk/: AndroidManifest.xml
docs/: AndroidManifest.xml  AndroidManifest_generated.xml  AndroidManifest_simple.xml
docs/apk/res/: Strings.xml
src/: action.rs  activity.rs  activity_alias.rs  application.rs  attribute_list.rs  category.rs  compatible_screens.rs  data.rs  error.rs  grant_uri_permission.rs  instrumentation.rs  intent_filter.rs  layout.rs  lib.rs  list_serde.rs  manifest.rs  meta_data.rs  path_permission.rs  permission.rs  permission_group.rs  permission_tree.rs  profileable.rs  provider.rs  queries.rs  receiver.rs  resources.rs  service.rs  supports_gl_texture.rs  supports_screens.rs  ui_options.rs  uses_configuration.rs  uses_feature.rs  uses_library.rs  uses_native_library.rs  uses_permission.rs  uses_permission_sdk_23.rs  uses_sdk.rs  var_or_bool.rs
src/resources/: any.rs  mipmap_or_drawable.rs  mod.rs  res_or_string.rs  string.rs  types.rs
tests/: common.rs  manifests.rs  xml_example.rs
tests/documents/: AndroidManifest_SIMPLE.xml  simple.toml  test_write.xml
