[package]
name = "android-manifest"
version = "0.1.0"
authors = ["DodoRare Team <dodonotrare@gmail.com>"]
description = "Android Manifest serializer and deserializer for Rust"
repository = "https://github.com/dodorare/android-manifest-rs"
license = "Apache-2.0"
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_plain = "0.3"
yaserde = "0.7.0"
yaserde_derive = "0.7.0"
xml-rs = "0.8.3"
log = "0.4"
