[package]
name = "android-manifest"
version = "0.1.7"
authors = ["DodoRare Team <dodonotrare@gmail.com>"]
description = "Android Manifest serializer and deserializer for Rust"
repository = "https://github.com/dodorare/android-manifest-rs"
license = "Apache-2.0"
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_plain = "1.0"
yaserde = "0.8"
yaserde_derive = "0.8"
xml-rs = "0.8.4"
thiserror = "1.0"
displaydoc = "0.2"
log = "0.4"
